--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -19,7 +19,7 @@
       <!-- navbar collapse -->
       <div class="collapse pos-rlt navbar-collapse box-shadow {{app.settings.navbarCollapseColor}}">
         <!-- buttons -->
-        <div class="nav navbar-nav hidden-xs">
+        <div class="nav navbar-nav hidden-xs" >
           <a href class="btn no-shadow navbar-btn" ng-click="app.settings.asideFolded = !app.settings.asideFolded">
             <i class="fa {{app.settings.asideFolded ? 'fa-indent' : 'fa-dedent'}} fa-fw"></i>
           </a>
@@ -30,13 +30,13 @@
         <!-- / buttons -->
 
         <!-- link and dropdown -->
-        <ul class="nav navbar-nav hidden-sm">
+        <ul class="nav navbar-nav hidden-sm"  >
           <li class="dropdown pos-stc" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
               <span>Mega</span> 
               <span class="caret"></span>
             </a>
-            <div class="dropdown-menu wrapper w-full bg-white">
+            <div class="dropdown-menu wrapper w-full bg-white" >
               <div class="row">
                 <div class="col-sm-4">
                   <div class="m-l-xs m-t-xs m-b-xs font-bold">Pages <span class="badge badge-sm bg-success">10</span></div>
@@ -134,7 +134,7 @@
               </div>
             </div>
           </li>
-          <li class="dropdown" dropdown>
+          <li class="dropdown"  >
             <a href class="dropdown-toggle" dropdown-toggle>
               <i class="fa fa-fw fa-plus visible-xs-inline-block"></i>
               <span translate="header.navbar.new.NEW">New</span> <span class="caret"></span>
@@ -174,7 +174,7 @@
         <!-- / search form -->
 
         <!-- nabar right -->
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" >
           <li class="dropdown hidden-sm" is-open="lang.isopen" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
               {{selectLang}} <b class="caret"></b>
