--- a/tpl/blocks/nav.html
+++ b/tpl/blocks/nav.html
@@ -20,13 +20,13 @@
       </li>
       <li ui-sref-active="active">
         <a ui-sref="app.dashboard-v1">
-          <span>Dashboard v1</span>
+          <span  translate="aside.nav.DASHBOARD1">Dashboard v1</span>
         </a>
       </li>
       <li ui-sref-active="active">
         <a ui-sref="app.dashboard-v2">
           <b class="label bg-info pull-right">N</b>
-          <span>Dashboard v2</span>
+          <span>仪表二</span>
         </a>
       </li>
     </ul>
