--- a/tpl/blocks/aside.music.html
+++ b/tpl/blocks/aside.music.html
@@ -1,4 +1,4 @@
-<div class="aside-wrap">
+<div class="aside-wrap" style="border:solid 2px #F00;">
   <div class="app-aside-footer dk">    
     <div class="dropdown dropup" dropdown>
       <a href class="pull-right wrapper m-r-xs" ng-click="app.settings.asideFolded = !app.settings.asideFolded">
