--- a/tpl/blocks/nav.html
+++ b/tpl/blocks/nav.html
@@ -26,7 +26,7 @@
       <li ui-sref-active="active">
         <a ui-sref="app.dashboard-v2">
           <b class="label bg-info pull-right">N</b>
-          <span>仪表二</span>
+          <span>Dashboard v2</span>
         </a>
       </li>
     </ul>
